# souffle-devcontainer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-ghcr.yaml
examples/: run_example.py
examples/family/: ancestor.dl
examples/family/output/: Ancestor.csv
souffle/: _api.py  api.py
